tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_fold_attribute_on_unconstrained/execute__tests__noirc_frontend_tests_deny_fold_attribute_on_unconstrained_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: misplaced #[fold] attribute on unconstrained function foo. Only allowed on constrained functions
  ┌─ src/main.nr:2:9
  │
2 │         #[fold]
  │         ------- misplaced #[fold] attribute
  │
  = The `#[fold]` attribute specifies whether a constrained function should be treated as a separate circuit rather than inlined into the program entry point

Aborting due to 1 previous error
